# operations-software-bitu

./: .gitignore  .gitreview  Dockerfile  Makefile  README.md  build.sh  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements-tox.txt  requirements.txt  tox.ini
.pipeline/: blubber.yaml  config.yaml
accounts/: admin.py  apps.py  models.py  tokens.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login.html  update_email.html  verify_email.html
bitu/: base_settings.py  settings.py  social_pipeline.py  test_settings.py  urls.py  utils.py  wsgi.py
bitu/tests/: test_utils.py
debian/: bitu.ini  changelog  control  copyright  install  postinst  python3-bitu.dirs  python3-bitu.rq-bitu.service  python3-bitu.tmpfiles  python3-bitu.uwsgi-bitu.service  rules
docker/cas/: keystore.jks
docs/: conf.py  configuration.rst  development.rst  index.rst
docs/ldapbackend/: index.rst  ldapbackend.helpers.rst
docs/source/: conf.py  index.rst
frontend/: vite.config.js
keymanagement/: admin.py  apps.py  forms.py  helpers.py  models.py  signals.py  validators.py  views.py
ldapbackend/: __init__.py  apps.py  forms.py  helpers.py  jobs.py  models.py  signals.py  validators.py
scripts/: bitu  entry_point.sh
signups/: admin.py  apps.py  forms.py  jobs.py  models.py  validators.py  views.py
static/: bitu.js
templates/: 403.html  about.html  base.html  navbar.html
wikimedia/: forms.py  jobs.py  middleware.py  social_pipeline.py  urls.py  validators.py  views.py
(+275 files in other folders)
